Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/Include/BTI708.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef int * LPINT;
typedef float FLOAT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long MSGADDR;
typedef unsigned long BASEADDR;
typedef int BOOL;
typedef void * HCORE;
typedef int HCORE;
typedef int ERRVAL;
typedef int MSGNDX;
typedef struct
{
    USHORT msgopt;              //Driver writes message options
    USHORT msgact;              //Card writes message activity
    union {
        ULONG  timetag;         //Card writes time tag
        ULONG  hitcount;        //Card writes hit count
    };
    union {
        ULONG  elapsetime;      //Card writes elapsed time
        ULONG  maxtime;         //Card writes max time
        ULONG  mintime;         //Card writes min time
    };
    ULONG  userptr;             //Driver writes user code pointer
    USHORT framenum;            //Frame Number
    USHORT msgcount;            //Card / Driver writes message bit count (used in variable bit length mode)
    ULONG  timetagh;            //Card writes extended timetag
    USHORT extflag;             //Driver writes external flags
    USHORT rsvd5;               //Reserved
    USHORT rsvd6;               //Reserved
    USHORT rsvd7;               //Reserved
    USHORT data[100];           //Card / User writes message data
    USHORT extra[16];           //Card / User writes extra data (used in variable bit length mode)
} MSGFIELDS708;
typedef MSGFIELDS708 * LPMSGFIELDS708;
/**
*
*  BTI708 Driver functions.
*
**/

BTI708API ERRVAL __stdcall BTI708_ChClear(INT channum,HCORE handleval);
BTI708API ERRVAL __stdcall BTI708_ChConfig(ULONG configval,INT channum,HCORE handleval);
BTI708API VOID __stdcall BTI708_ChGetCount(LPINT rcvcount,LPINT xmtcount,HCORE handleval);
BTI708API ULONG __stdcall BTI708_ChGetInfo(USHORT infotype,INT channum,HCORE handleval);
BTI708API BOOL __stdcall BTI708_ChIs708(INT channum,HCORE handleval);
BTI708API BOOL __stdcall BTI708_ChIsRcv(INT channum,HCORE handleval);
BTI708API BOOL __stdcall BTI708_ChIsXmt(INT channum,HCORE handleval);
BTI708API VOID __stdcall BTI708_ChPause(INT channum,HCORE handleval);
BTI708API INT __stdcall BTI708_ChPauseCheck(INT channum,HCORE handleval);
BTI708API VOID __stdcall BTI708_ChResume(INT channum,HCORE handleval);
BTI708API BOOL __stdcall BTI708_ChStart(INT channum,HCORE handleval);
BTI708API BOOL __stdcall BTI708_ChStop(INT channum,HCORE handleval);
BTI708API ERRVAL __stdcall BTI708_ChSyncDefine(BOOL enableflag,USHORT syncmask,USHORT pinpolarity,INT channum,HCORE handleval);
BTI708API ERRVAL __stdcall BTI708_ChTriggerDefine(BOOL enableflag,USHORT trigmask,USHORT trigval,USHORT pinpolarity,INT channum,HCORE handleval);
BTI708API USHORT __stdcall BTI708_FieldGetAngle(LPUSHORT buf);
BTI708API FLOAT __stdcall BTI708_FieldGetAngleFl(LPUSHORT buf);
BTI708API USHORT __stdcall BTI708_FieldGetControlAccept(LPUSHORT buf);
BTI708API USHORT __stdcall BTI708_FieldGetData(INT binnum,LPUSHORT buf);
BTI708API USHORT __stdcall BTI708_FieldGetDataAccept(LPUSHORT buf);
BTI708API USHORT __stdcall BTI708_FieldGetFaults(LPUSHORT buf);
BTI708API INT __stdcall BTI708_FieldGetGain(LPUSHORT buf);
BTI708API USHORT __stdcall BTI708_FieldGetLabel(LPUSHORT buf);
BTI708API USHORT __stdcall BTI708_FieldGetMode(LPUSHORT buf);
BTI708API INT __stdcall BTI708_FieldGetRange(LPUSHORT buf);
BTI708API USHORT __stdcall BTI708_FieldGetTilt(LPUSHORT buf);
BTI708API FLOAT __stdcall BTI708_FieldGetTiltFl(LPUSHORT buf);
BTI708API USHORT __stdcall BTI708_FieldPutAngle(USHORT value,LPUSHORT buf);
BTI708API FLOAT __stdcall BTI708_FieldPutAngleFl(FLOAT angle,LPUSHORT buf);
BTI708API USHORT __stdcall BTI708_FieldPutControlAccept(USHORT value,LPUSHORT buf);
BTI708API USHORT __stdcall BTI708_FieldPutData(USHORT value,INT binnum,LPUSHORT buf);
BTI708API USHORT __stdcall BTI708_FieldPutDataAccept(USHORT value,LPUSHORT buf);
BTI708API USHORT __stdcall BTI708_FieldPutFaults(USHORT value,LPUSHORT buf);
BTI708API INT __stdcall BTI708_FieldPutGain(INT gain,LPUSHORT buf);
BTI708API USHORT __stdcall BTI708_FieldPutLabel(USHORT value,LPUSHORT buf);
BTI708API USHORT __stdcall BTI708_FieldPutMode(USHORT value,LPUSHORT buf);
BTI708API INT __stdcall BTI708_FieldPutRange(INT range,LPUSHORT buf);
BTI708API USHORT __stdcall BTI708_FieldPutTilt(USHORT value,LPUSHORT buf);
BTI708API FLOAT __stdcall BTI708_FieldPutTiltFl(FLOAT tilt,LPUSHORT buf);
BTI708API ERRVAL __stdcall BTI708_MsgBlockRd(LPMSGFIELDS708 msgfields,MSGNDX msgindex,INT channum,HCORE handleval);
BTI708API ERRVAL __stdcall BTI708_MsgBlockWr(LPMSGFIELDS708 msgfields,MSGNDX msgindex,INT channum,HCORE handleval);
BTI708API ERRVAL __stdcall BTI708_MsgDataRd(LPUSHORT buf,MSGNDX msgindex,INT channum,HCORE handleval);
BTI708API ERRVAL __stdcall BTI708_MsgDataWr(LPUSHORT buf,MSGNDX msgindex,INT channum,HCORE handleval);
BTI708API BOOL __stdcall BTI708_MsgIsAccessed(MSGNDX msgindex,INT channum,HCORE handleval);
BTI708API ERRVAL __stdcall BTI708_MsgSyncDefine(BOOL enableflag,USHORT syncmask,USHORT pinpolarity,MSGNDX msgindex,INT channum,HCORE handleval);
BTI708API ERRVAL __stdcall BTI708_MsgTriggerDefine(BOOL enableflag,USHORT trigmask,USHORT trigval,USHORT pinpolarity,MSGNDX msgindex,INT channum,HCORE handleval);
BTI708API ERRVAL __stdcall BTI708_MsgVarDataRd(LPUSHORT buf,LPINT bitcount,MSGNDX msgindex,INT channum,HCORE handleval);
BTI708API ERRVAL __stdcall BTI708_MsgVarDataWr(LPUSHORT buf,INT bitcount,MSGNDX msgindex,INT channum,HCORE handleval);
BTI708API ERRVAL __stdcall BTI708_ParamAmplitudeConfig(ULONG configval,USHORT dacval,INT channum,HCORE handleval);
BTI708API ERRVAL __stdcall BTI708_RcvBuild(ULONG configval,INT logfreq,INT framecount,INT channum,HCORE handleval);
BTI708API ERRVAL __stdcall BTI708_XmtBuild(ULONG configval,USHORT framefreq,INT logfreq,INT framecount,INT channum,HCORE handleval);
/**
*
*  Internal functions used by the BTI708 Driver.
*
**/

BTI708API ERRVAL __stdcall BTI708_ChConfigEx(ULONG configval,USHORT count,INT channum,HCORE handleval);
BTI708API USHORT __stdcall BTI708_ChDataCountRd(INT channum,HCORE handleval);
BTI708API USHORT __stdcall BTI708_ChDataCountWr(USHORT countval,INT channum,HCORE handleval);
BTI708API INT __stdcall BTI708_DllUsageCount(VOID);
BTI708API VOID __stdcall BTI708_GetChanCount(LPINT rcvcount,LPINT xmtcount,HCORE handleval);
BTI708API ERRVAL __stdcall BTI708_HostComm(LPVOID lpParam,HCORE handleval);
BTI708API BOOL __stdcall BTI708_IsChan(INT channum,HCORE handleval);
BTI708API BOOL __stdcall BTI708_IsRcvChan(INT channum,HCORE handleval);
BTI708API BOOL __stdcall BTI708_IsXmtChan(INT channum,HCORE handleval);
BTI708API USHORT __stdcall BTI708_MsgActivityRd(MSGNDX msgindex,INT channum,HCORE handleval);
BTI708API VOID __stdcall BTI708_MsgActivityWr(USHORT value,MSGNDX msgindex,INT channum,HCORE handleval);
BTI708API MSGADDR __stdcall BTI708_MsgAddr(MSGNDX msgindex,INT channum,HCORE handleval);
BTI708API ERRVAL __stdcall BTI708_MsgCommRd(LPMSGFIELDS708 msgfields,MSGNDX msgindex,INT channum,HCORE handleval);
BTI708API ERRVAL __stdcall BTI708_MsgCommWr(LPMSGFIELDS708 msgfields,MSGNDX msgindex,INT channum,HCORE handleval);
BTI708API ERRVAL __stdcall BTI708_MsgConfig(ULONG configval,MSGADDR msgaddr,HCORE handleval);
BTI708API MSGADDR __stdcall BTI708_MsgCreate(ULONG configval,HCORE handleval);
BTI708API USHORT __stdcall BTI708_MsgOptRd(MSGADDR msgaddr,HCORE handleval);
BTI708API VOID __stdcall BTI708_MsgOptWr(USHORT msgopt,MSGADDR msgaddr,HCORE handleval);
BTI708API VOID __stdcall BTI708_MsgReset(MSGADDR msgaddr,HCORE handleval);
BTI708API BASEADDR __stdcall BTI708_MsgTableCreate(INT count,HCORE handleval);
BTI708API MSGADDR __stdcall BTI708_MsgTableRd(MSGNDX msgindex,INT channum,HCORE handleval);
BTI708API VOID __stdcall BTI708_MsgTableReset(INT channum,HCORE handleval);
BTI708API VOID __stdcall BTI708_MsgTableWipe(BASEADDR baseaddr,HCORE handleval);