Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/Include/BTI708VB.BAS


Public Declare Function BTI708_ChClear Lib "BTI708.DLL" Alias "_BTI708_ChClear@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI708_ChConfig Lib "BTI708.DLL" Alias "_BTI708_ChConfig@12" (ByVal configval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Sub BTI708_ChGetCount Lib "BTI708.DLL" Alias "_BTI708_ChGetCount@12" (ByRef rcvcount As Long, ByRef xmtcount As Long, ByVal handleval As Long)
Public Declare Function BTI708_ChGetInfo Lib "BTI708.DLL" Alias "_BTI708_ChGetInfo@12" (ByVal infotype As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI708_ChIs708 Lib "BTI708.DLL" Alias "_BTI708_ChIs708@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI708_ChIsRcv Lib "BTI708.DLL" Alias "_BTI708_ChIsRcv@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI708_ChIsXmt Lib "BTI708.DLL" Alias "_BTI708_ChIsXmt@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Sub BTI708_ChPause Lib "BTI708.DLL" Alias "_BTI708_ChPause@8" (ByVal channum As Long, ByVal handleval As Long)
Public Declare Function BTI708_ChPauseCheck Lib "BTI708.DLL" Alias "_BTI708_ChPauseCheck@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Sub BTI708_ChResume Lib "BTI708.DLL" Alias "_BTI708_ChResume@8" (ByVal channum As Long, ByVal handleval As Long)
Public Declare Function BTI708_ChStart Lib "BTI708.DLL" Alias "_BTI708_ChStart@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI708_ChStop Lib "BTI708.DLL" Alias "_BTI708_ChStop@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI708_ChSyncDefine Lib "BTI708.DLL" Alias "_BTI708_ChSyncDefine@20" (ByVal enableflag As Long, ByVal syncmask As Integer, ByVal pinpolarity As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI708_ChTriggerDefine Lib "BTI708.DLL" Alias "_BTI708_ChTriggerDefine@24" (ByVal enableflag As Long, ByVal trigmask As Integer, ByVal trigval As Integer, ByVal pinpolarity As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI708_FieldGetAngle Lib "BTI708.DLL" Alias "_BTI708_FieldGetAngle@4" (ByRef buf As Integer) As Integer
Public Declare Function BTI708_FieldGetAngleFl Lib "BTI708.DLL" Alias "_BTI708_FieldGetAngleFl@4" (ByRef buf As Integer) As Single
Public Declare Function BTI708_FieldGetControlAccept Lib "BTI708.DLL" Alias "_BTI708_FieldGetControlAccept@4" (ByRef buf As Integer) As Integer
Public Declare Function BTI708_FieldGetData Lib "BTI708.DLL" Alias "_BTI708_FieldGetData@8" (ByVal binnum As Long, ByRef buf As Integer) As Integer
Public Declare Function BTI708_FieldGetDataAccept Lib "BTI708.DLL" Alias "_BTI708_FieldGetDataAccept@4" (ByRef buf As Integer) As Integer
Public Declare Function BTI708_FieldGetFaults Lib "BTI708.DLL" Alias "_BTI708_FieldGetFaults@4" (ByRef buf As Integer) As Integer
Public Declare Function BTI708_FieldGetGain Lib "BTI708.DLL" Alias "_BTI708_FieldGetGain@4" (ByRef buf As Integer) As Long
Public Declare Function BTI708_FieldGetLabel Lib "BTI708.DLL" Alias "_BTI708_FieldGetLabel@4" (ByRef buf As Integer) As Integer
Public Declare Function BTI708_FieldGetMode Lib "BTI708.DLL" Alias "_BTI708_FieldGetMode@4" (ByRef buf As Integer) As Integer
Public Declare Function BTI708_FieldGetRange Lib "BTI708.DLL" Alias "_BTI708_FieldGetRange@4" (ByRef buf As Integer) As Long
Public Declare Function BTI708_FieldGetTilt Lib "BTI708.DLL" Alias "_BTI708_FieldGetTilt@4" (ByRef buf As Integer) As Integer
Public Declare Function BTI708_FieldGetTiltFl Lib "BTI708.DLL" Alias "_BTI708_FieldGetTiltFl@4" (ByRef buf As Integer) As Single
Public Declare Function BTI708_FieldPutAngle Lib "BTI708.DLL" Alias "_BTI708_FieldPutAngle@8" (ByVal value As Integer, ByRef buf As Integer) As Integer
Public Declare Function BTI708_FieldPutAngleFl Lib "BTI708.DLL" Alias "_BTI708_FieldPutAngleFl@8" (ByVal angle As Single, ByRef buf As Integer) As Single
Public Declare Function BTI708_FieldPutControlAccept Lib "BTI708.DLL" Alias "_BTI708_FieldPutControlAccept@8" (ByVal value As Integer, ByRef buf As Integer) As Integer
Public Declare Function BTI708_FieldPutData Lib "BTI708.DLL" Alias "_BTI708_FieldPutData@12" (ByVal value As Integer, ByVal binnum As Long, ByRef buf As Integer) As Integer
Public Declare Function BTI708_FieldPutDataAccept Lib "BTI708.DLL" Alias "_BTI708_FieldPutDataAccept@8" (ByVal value As Integer, ByRef buf As Integer) As Integer
Public Declare Function BTI708_FieldPutFaults Lib "BTI708.DLL" Alias "_BTI708_FieldPutFaults@8" (ByVal value As Integer, ByRef buf As Integer) As Integer
Public Declare Function BTI708_FieldPutGain Lib "BTI708.DLL" Alias "_BTI708_FieldPutGain@8" (ByVal gain As Long, ByRef buf As Integer) As Long
Public Declare Function BTI708_FieldPutLabel Lib "BTI708.DLL" Alias "_BTI708_FieldPutLabel@8" (ByVal value As Integer, ByRef buf As Integer) As Integer
Public Declare Function BTI708_FieldPutMode Lib "BTI708.DLL" Alias "_BTI708_FieldPutMode@8" (ByVal value As Integer, ByRef buf As Integer) As Integer
Public Declare Function BTI708_FieldPutRange Lib "BTI708.DLL" Alias "_BTI708_FieldPutRange@8" (ByVal range As Long, ByRef buf As Integer) As Long
Public Declare Function BTI708_FieldPutTilt Lib "BTI708.DLL" Alias "_BTI708_FieldPutTilt@8" (ByVal value As Integer, ByRef buf As Integer) As Integer
Public Declare Function BTI708_FieldPutTiltFl Lib "BTI708.DLL" Alias "_BTI708_FieldPutTiltFl@8" (ByVal tilt As Single, ByRef buf As Integer) As Single
Public Declare Function BTI708_MsgBlockRd Lib "BTI708.DLL" Alias "_BTI708_MsgBlockRd@16" (ByRef msgfields As MSGFIELDS708, ByVal msgindex As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI708_MsgBlockWr Lib "BTI708.DLL" Alias "_BTI708_MsgBlockWr@16" (ByRef msgfields As MSGFIELDS708, ByVal msgindex As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI708_MsgDataRd Lib "BTI708.DLL" Alias "_BTI708_MsgDataRd@16" (ByRef buf As Integer, ByVal msgindex As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI708_MsgDataWr Lib "BTI708.DLL" Alias "_BTI708_MsgDataWr@16" (ByRef buf As Integer, ByVal msgindex As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI708_MsgIsAccessed Lib "BTI708.DLL" Alias "_BTI708_MsgIsAccessed@12" (ByVal msgindex As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI708_MsgSyncDefine Lib "BTI708.DLL" Alias "_BTI708_MsgSyncDefine@24" (ByVal enableflag As Long, ByVal syncmask As Integer, ByVal pinpolarity As Integer, ByVal msgindex As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI708_MsgTriggerDefine Lib "BTI708.DLL" Alias "_BTI708_MsgTriggerDefine@28" (ByVal enableflag As Long, ByVal trigmask As Integer, ByVal trigval As Integer, ByVal pinpolarity As Integer, ByVal msgindex As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI708_MsgVarDataRd Lib "BTI708.DLL" Alias "_BTI708_MsgVarDataRd@20" (ByRef buf As Integer, ByRef bitcount As Long, ByVal msgindex As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI708_MsgVarDataWr Lib "BTI708.DLL" Alias "_BTI708_MsgVarDataWr@20" (ByRef buf As Integer, ByVal bitcount As Long, ByVal msgindex As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI708_ParamAmplitudeConfig Lib "BTI708.DLL" Alias "_BTI708_ParamAmplitudeConfig@16" (ByVal configval As Long, ByVal dacval As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI708_RcvBuild Lib "BTI708.DLL" Alias "_BTI708_RcvBuild@20" (ByVal configval As Long, ByVal logfreq As Long, ByVal framecount As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI708_XmtBuild Lib "BTI708.DLL" Alias "_BTI708_XmtBuild@24" (ByVal configval As Long, ByVal framefreq As Integer, ByVal logfreq As Long, ByVal framecount As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI708_ChConfigEx Lib "BTI708.DLL" Alias "_BTI708_ChConfigEx@16" (ByVal configval As Long, ByVal count As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI708_ChDataCountRd Lib "BTI708.DLL" Alias "_BTI708_ChDataCountRd@8" (ByVal channum As Long, ByVal handleval As Long) As Integer
Public Declare Function BTI708_ChDataCountWr Lib "BTI708.DLL" Alias "_BTI708_ChDataCountWr@12" (ByVal countval As Integer, ByVal channum As Long, ByVal handleval As Long) As Integer
Public Declare Function BTI708_DllUsageCount Lib "BTI708.DLL" Alias "_BTI708_DllUsageCount@0" () As Long
Public Declare Sub BTI708_GetChanCount Lib "BTI708.DLL" Alias "_BTI708_GetChanCount@12" (ByRef rcvcount As Long, ByRef xmtcount As Long, ByVal handleval As Long)
Public Declare Function BTI708_HostComm Lib "BTI708.DLL" Alias "_BTI708_HostComm@8" (ByVal lpparam As Long, ByVal handleval As Long) As Long
Public Declare Function BTI708_IsChan Lib "BTI708.DLL" Alias "_BTI708_IsChan@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI708_IsRcvChan Lib "BTI708.DLL" Alias "_BTI708_IsRcvChan@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI708_IsXmtChan Lib "BTI708.DLL" Alias "_BTI708_IsXmtChan@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI708_MsgActivityRd Lib "BTI708.DLL" Alias "_BTI708_MsgActivityRd@12" (ByVal msgindex As Long, ByVal channum As Long, ByVal handleval As Long) As Integer
Public Declare Sub BTI708_MsgActivityWr Lib "BTI708.DLL" Alias "_BTI708_MsgActivityWr@16" (ByVal value As Integer, ByVal msgindex As Long, ByVal channum As Long, ByVal handleval As Long)
Public Declare Function BTI708_MsgAddr Lib "BTI708.DLL" Alias "_BTI708_MsgAddr@12" (ByVal msgindex As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI708_MsgCommRd Lib "BTI708.DLL" Alias "_BTI708_MsgCommRd@16" (ByRef msgfields As MSGFIELDS708, ByVal msgindex As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI708_MsgCommWr Lib "BTI708.DLL" Alias "_BTI708_MsgCommWr@16" (ByRef msgfields As MSGFIELDS708, ByVal msgindex As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI708_MsgConfig Lib "BTI708.DLL" Alias "_BTI708_MsgConfig@12" (ByVal configval As Long, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTI708_MsgCreate Lib "BTI708.DLL" Alias "_BTI708_MsgCreate@8" (ByVal configval As Long, ByVal handleval As Long) As Long
Public Declare Function BTI708_MsgOptRd Lib "BTI708.DLL" Alias "_BTI708_MsgOptRd@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Integer
Public Declare Sub BTI708_MsgOptWr Lib "BTI708.DLL" Alias "_BTI708_MsgOptWr@12" (ByVal msgopt As Integer, ByVal msgaddr As Long, ByVal handleval As Long)
Public Declare Sub BTI708_MsgReset Lib "BTI708.DLL" Alias "_BTI708_MsgReset@8" (ByVal msgaddr As Long, ByVal handleval As Long)
Public Declare Function BTI708_MsgTableCreate Lib "BTI708.DLL" Alias "_BTI708_MsgTableCreate@8" (ByVal count As Long, ByVal handleval As Long) As Long
Public Declare Function BTI708_MsgTableRd Lib "BTI708.DLL" Alias "_BTI708_MsgTableRd@12" (ByVal msgindex As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Sub BTI708_MsgTableReset Lib "BTI708.DLL" Alias "_BTI708_MsgTableReset@8" (ByVal channum As Long, ByVal handleval As Long)
Public Declare Sub BTI708_MsgTableWipe Lib "BTI708.DLL" Alias "_BTI708_MsgTableWipe@8" (ByVal basevaladdr As Long, ByVal handleval As Long)
